--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <button onclick="appendToDisplay('3')">3</button>
             <button onclick="appendToDisplay('/')">/</button>
             <button onclick="appendToDisplay('.')">.</button>
-            <button onclick="calculate()">=</button>
+            <button onclick="calculateResult()">=</button>
             <button onclick="clearDisplay()">C</button>
         </div>
     </div>
